--- a/www/templates/kompair/results.html
+++ b/www/templates/kompair/results.html
@@ -20,7 +20,7 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="AlignCenter">{{result.answers}}</div>
+                                    <div class="AlignCenter">{{result.arrCategories.length}}</div>
                                     <div>
                                         <a class="button button-icon icon ion-android-locate col"></a>
                                     </div>
