--- a/www/css/style.css
+++ b/www/css/style.css
@@ -108,3 +108,10 @@ ol {
     background-color: rgba(20, 20, 20, 0.1);
     padding: 0;
 }
+
+.ES_SelectCatType {
+    width: 300px;
+    height: 45px;
+    margin: 0 auto;
+    font-size: 20px;
+}
