--- a/www/templates/base/about.html
+++ b/www/templates/base/about.html
@@ -1,6 +1,11 @@
 <ion-view view-title="About">
-	<ion-content class="padding">
-	  <h3 align="center">Komapir!</h3>
-	  <p>Just some guys making the next great thing to come to your phones!</p>
-	</ion-content>
+    <ion-content class="padding">
+        <h3 align="center">Kompair!</h3>
+        <p>The <b>KOMPAIR</b> app is a platform where people can create and compare items.
+            <br/>
+            <br/> The app merely provides funcationalities for users to search existing comparision, update or add new comparisons.
+            <br/>
+            <br/>
+        </p>
+    </ion-content>
 </ion-view>
