--- a/www/templates/kompair/edit.html
+++ b/www/templates/kompair/edit.html
@@ -93,7 +93,7 @@
                 </div>
                 <div class="row">
                     <button ng-show="!showCatDropdown" ng-init="showCatDropdown = false" class="col button button-small ion ion-plus-circled" ng-click="showCatDropdown = true"></button>
-                    <select ng-show="showCatDropdown" class="form-control" ng-model="ed.sTypeOfCategory" ng-change="showCatDropdown = false; ed.Helper.PushNewType(ed.oCompair.oCamparables, 'category');">
+                    <select ng-show="showCatDropdown" class="form-control ES_SelectCatType" ng-model="ed.sTypeOfCategory" ng-change="showCatDropdown = false; ed.Helper.PushNewType(ed.oCompair.oCamparables, 'category');">
                         <option ng-repeat="o in ed.oShared.oCommonFactory.Constants.ArrOfTypeOfCategories track by $index" value="{{o.type}}">
                             {{o.type}}
                         </option>
