Fixed comparables count

--- a/www/templates/kompair/compare.html
+++ b/www/templates/kompair/compare.html
@@ -12,7 +12,7 @@
                                 </div>
                             </div>
                             <div>
-                                <div class="AlignCenter">{{com.oCompair.arrCategories.length}}</div>
+                                <div class="AlignCenter">{{com.oCompair.oCamparables.length}}</div>
                                 <div>
                                     <a class="button button-icon icon ion-android-locate col"></a>
                                 </div>
