--- a/www/templates/base/tabs.html
+++ b/www/templates/base/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs class="tabs-icon-top tabs-positive">
+<ion-tabs class="tabs-icon-top tabs-calm">
     <ion-tab title="Home" icon="ion-home" ui-sref="kompair.home">
         <!-- <div ng-include="'templates/tab/headerFooter.html'"></div> -->
         <ion-nav-view name="home-tab"></ion-nav-view>
