--- a/www/templates/kompair/yourQ.html
+++ b/www/templates/kompair/yourQ.html
@@ -13,7 +13,7 @@
                                 </div>
                             </div>
                             <div>
-                                <div class="AlignCenter">{{result.answers}}</div>
+                                <div class="AlignCenter">{{result.oCamparables.length}}</div>
                                 <div>
                                     <a class="button button-icon icon ion-android-locate col"></a>
                                 </div>
